build_log_parser.txt
src/parser.c: In function ‘parse_variable’:
src/parser.c:207:32: error: implicit declaration of function ‘strdup’; did you mean ‘strcmp’? [-Wimplicit-function-declaration]
  207 |              char* type_name = strdup(token_type_to_string(parser->previous.type));
      |                                ^~~~~~
      |                                strcmp
src/parser.c:207:32: error: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
src/parser.c:217:28: error: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  217 |          char* type_name = strdup(token_type_to_string(parser->previous.type));
      |                            ^~~~~~
make: *** [Makefile:23: build/parser.o] Error 1
